--- a/gulp.spriteSmith/css/style.less
+++ b/gulp.spriteSmith/css/style.less
@@ -1,8 +1,3 @@
-@import "./sprites.less";
-.icon-me{
-	.sprites(@admin);
-	width:15px;
-	height:15px;
-	display: inline-block;
-	margin-right: 10px;
-}
+@import "./sprite.less";
+
+@import "./common.less";
